[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
criterion = "0.4.0"
regex = "1.7.0"
serde = "1.0.150"
serde_json = "1.0.89"

[[bench]]
name = "main"
harness = false
